[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/menu/Click.wav" type="AudioStream" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -41.5
margin_right = 41.5
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center] PAUSED [/center]"
text = " PAUSED "
fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -22.0
margin_right = 41.5
margin_bottom = 22.0
alignment = 1

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Return"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Main Menu"

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SoundEffects"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
